--- a/Deep learning/imageClassification.ipynb
+++ b/Deep learning/imageClassification.ipynb
@@ -354,11 +354,18 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.0 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.0"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "d3e10ef16274dd72e574b8fa73b58450b957d8421a2901baded3cca26fcf5dda"
+      }
     }
   },
   "nbformat": 4,
