--- a/Machin Learning/Nonlinear_Regression.ipynb
+++ b/Machin Learning/Nonlinear_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,19 +117,19 @@
        "8   700  7000000"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('Polynomial_regression.csv')\n",
+    "df = pd.read_csv('Nonlinear_Regression.csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "       [700]], dtype=int64)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "Name: price, dtype: int64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b9c4083dc0>]"
+       "[<matplotlib.lines.Line2D at 0x27b194d3b80>]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -279,12 +279,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>500</td>\n",
+       "      <th>7</th>\n",
+       "      <td>600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>350</td>\n",
+       "      <th>5</th>\n",
+       "      <td>450</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -292,11 +292,11 @@
       ],
       "text/plain": [
        "   area\n",
-       "6   500\n",
-       "3   350"
+       "7   600\n",
+       "5   450"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,18 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6    4500000\n",
-       "3    2000000\n",
+       "7    6000000\n",
+       "5    3500000\n",
        "Name: price, dtype: int64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -343,10 +343,10 @@
     {
      "data": {
       "text/plain": [
-       "array([4385964.9122807 , 2757017.54385965])"
+       "array([5471929.8245614 , 3842982.45614035])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -371,10 +371,10 @@
     {
      "data": {
       "text/plain": [
-       "0.812454539858418"
+       "0.8731215758694982"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "       [1.000e+00, 7.000e+02, 4.900e+05]])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "array([100. , 100.2, 100.4, ..., 699.4, 699.6, 699.8])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "       [699.8]])"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,16 +491,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b9c3fafcd0>]"
+       "[<matplotlib.lines.Line2D at 0x27b1b611990>]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -553,12 +553,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>500</td>\n",
+       "      <th>7</th>\n",
+       "      <td>600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>350</td>\n",
+       "      <th>5</th>\n",
+       "      <td>450</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -566,11 +566,11 @@
       ],
       "text/plain": [
        "   area\n",
-       "6   500\n",
-       "3   350"
+       "7   600\n",
+       "5   450"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,18 +581,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6    4500000\n",
-       "3    2000000\n",
+       "7    6000000\n",
+       "5    3500000\n",
        "Name: price, dtype: int64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,16 +603,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4080533.97957703, 2345860.51906625])"
+       "array([5589403.26021666, 3431825.43134695])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,16 +623,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9054172028997578"
+       "0.9445640145498438"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
